# navapali

./: CNAME  README.md  app.yaml  mkdocs.yml  pyproject.toml  wasmer.toml
.github/workflows/: deploy-to-edge.yml
docs/: index.md
